@@ -1,3 +1,5 @@
+- fix loading of tifm_sd module
+
 Version 10.4.198 - 16 September 2007, by Thierry Vignaud
 
 - fix a crash
